# cvetopt

./: .env.example  .gitignore  DEPLOY_WINDOWS_STATUS.md  README.md  README_WIN.md  build-cvetopt-exe.bat  config.yaml  cvetopt-hidden.vbs  cvetopt-launcher.vbs  cvetopt-stop.bat  cvetopt.bat  pyproject.toml  ТЗ.md
docs/: Auto_new_auto1_workflow.md
launcher/: cvetopt_app.py
scripts/: build-launcher-exe.ps1  create-desktop-shortcut.ps1  deploy-server.ps1
src/cvetopt/: app.py  auto_new_xls.py
src/cvetopt/core/: job_manager.py  logging_setup.py  models.py  registry.py  runtime_settings.py  settings.py  testing_reset.py
src/cvetopt/invoice/: __init__.py  auto1_pipeline.py  description_dictionary.py  ecuador_create.py  ecuador_transform.py  holland_markers.py  holland_translate.py  xlsx_patch.py  xlsx_read.py
src/cvetopt/mail/: __init__.py  attachments.py  short_postprocess.py
src/cvetopt/scrapers/: auto1_pipeline.py  balance_auto.py  biflorica.py  delmir.py  ecuador_create_job.py  holland_full_cycle.py  holland_translate.py  mail_attachments.py
src/cvetopt/ui/templates/: index.html  job.html
Новая папка/: Голландия_1_18.06.2026.xlsm
