[project]
name = "cvetopt"
version = "0.1.0"
description = "Скачивание отчётов по сделкам с порталов (Biflorica v1)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "jinja2>=3.1",
    "python-dotenv>=1.0",
    "loguru>=0.7",
    "playwright>=1.49",
    "pydantic>=2.10",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "python-dateutil>=2.9",
    "xlrd>=2.0",
    "xlwt>=1.3",
    "xlutils>=2.0",
    "xlwings>=0.31",
    "openpyxl>=3.1",
]

[project.scripts]
cvetopt = "cvetopt.app:main"

[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
cvetopt = ["ui/templates/*.html"]
